Closed Bug 1892445 Opened 2 years ago Closed 1 year ago

10 bit RGB AV1 video broken on Linux

Categories

(Core :: Audio/Video: Playback, defect)

Desktop
Linux
defect

Tracking

()

VERIFIED FIXED
128 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox125 --- wontfix
firefox126 --- wontfix
firefox127 --- verified
firefox128 --- verified

People

(Reporter: jrmuizel, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached video 10bit-rgb.mp4

It's mostly green with vertical stripes. It works on Windows and macOS.

Summary: RGB AV1 video broken on Linux → 10 bit RGB AV1 video broken on Linux

Set release status flags based on info from the regressing bug 1745285

:stransky, since you are the author of the regressor, bug 1745285, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(stransky)

Pernosco session of this, https://pernos.co/debug/ZP6-KJAivXPSOw-ftTyNOg/index.html#f{m[BkoG,S1o_,t[Ah8,O3aB_,f{e[BkoG,Sao_,s{aci2xwAAA,bAZU,uFJeF4Q,oFKQ9ZA___/ for whoever gets to it first. Happy to help if unfamilar with pernosco.

:jimm could this be triaged for severity?

Looks like we're missing implementation for AV_PIX_FMT_GBRP10LE on FFmpeg side.

Flags: needinfo?(stransky)
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/7558b1bd11aa [Linux] Add support for AV1 10bit video format AV_PIX_FMT_GBRP10LE r=alwu
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch

The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox127 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(stransky)

Comment on attachment 9402228 [details]
Bug 1892445 [Linux] Add support for AV1 10bit video format AV_PIX_FMT_GBRP10LE r?alwu

Beta/Release Uplift Approval Request

  • User impact if declined: Broken playback of AV1 10bit RGB video format.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Open the attached video clip in Firefox.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We already use the code path for other formats.
  • String changes made/needed:
  • Is Android affected?: Yes
Flags: needinfo?(stransky)
Attachment #9402228 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9402228 [details]
Bug 1892445 [Linux] Add support for AV1 10bit video format AV_PIX_FMT_GBRP10LE r?alwu

Approved for 127 beta 6, thanks.

Attachment #9402228 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Reproduced the issue on Firefox 115.0.1 esr on Ubuntu 24.04 LTS by following the infos provided in Comment 10.

The issue is no longer reproducible on Firefox 127.0b6 and Firefox 128.0a1 (2024-05-24) on the same system.

How common is this in the wild? I'm inclined to wontfix ESR115 and let this ride to those users with the upcoming ESR128 release. SGTY?

Flags: needinfo?(stransky)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #14)

How common is this in the wild? I'm inclined to wontfix ESR115 and let this ride to those users with the upcoming ESR128 release. SGTY?

No idea, haven't seen such clip yet. Should be safe to keep it for ESR128.

Flags: needinfo?(stransky)
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: