Bug 1892445 [Linux] Add support for AV1 10bit video format AV_PIX_FMT_GBRP10LE r=alwu a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D210672